crates/pandaspy-proto/tests/snapshots/golden__every_report_fixture_parses_and_matches_its_snapshot.snap
---
source: crates/pandaspy-proto/tests/golden.rs
expression: state
input_file: fixtures/reports/scaffold-minimal.json
---
{
  "serial": "00M09A000000000",
  "model": "H2D",
  "stage": "RUNNING",
  "nozzle_temperature_c": 220.0,
  "bed_temperature_c": 60.0,
  "progress_percent": 42
}
