crates/pandaspy-proto/tests/snapshots/golden__every_report_fixture_parses_and_matches_its_snapshot@synthetic-a1-external-spool.json.snap
---
source: crates/pandaspy-proto/tests/golden.rs
assertion_line: 36
expression: state
input_file: fixtures/reports/synthetic-a1-external-spool.json
---
{
  "nozzle_temper": 229.9,
  "nozzle_target_temper": 230.0,
  "bed_temper": 65.0,
  "bed_target_temper": 65.0,
  "chamber_temper": null,
  "cooling_fan_speed": 12,
  "big_fan1_speed": 0,
  "big_fan2_speed": 0,
  "heatbreak_fan_speed": 15,
  "gcode_state": "RUNNING",
  "gcode_file": "vase.gcode",
  "subtask_name": "spiral vase",
  "mc_percent": 15,
  "mc_remaining_time": 141,
  "layer_num": 41,
  "total_layer_num": 260,
  "stg_cur": 0,
  "print_type": "local",
  "print_error": 0,
  "spd_lvl": 2,
  "spd_mag": 100,
  "nozzle_diameter": "0.4",
  "nozzle_type": "stainless_steel",
  "wifi_signal": "-49dBm",
  "sdcard": true,
  "home_flag": null,
  "lights_report": [],
  "ams": {
    "ams": [],
    "ams_exist_bits": 0,
    "tray_exist_bits": 0,
    "tray_is_bbl_bits": null,
    "tray_read_done_bits": null,
    "tray_now": 254,
    "tray_tar": 254,
    "tray_pre": 255,
    "version": null,
    "insert_flag": null,
    "power_on_flag": null
  },
  "vt_tray": {
    "id": 254,
    "tray_type": "PETG",
    "tray_color": "5898DDFF",
    "cols": [],
    "tray_info_idx": null,
    "tray_id_name": null,
    "tray_sub_brands": null,
    "remain": -1,
    "k": null,
    "n": null,
    "nozzle_temp_min": 230.0,
    "nozzle_temp_max": 260.0,
    "bed_temp": null,
    "tray_diameter": null,
    "tray_weight": null,
    "tag_uid": null,
    "tray_uuid": null
  },
  "device": null,
  "hms": []
}
