crates/pandaspy-proto/tests/snapshots/golden__every_report_fixture_parses_and_matches_its_snapshot@synthetic-a1mini-ams-lite.json.snap
---
source: crates/pandaspy-proto/tests/golden.rs
assertion_line: 36
expression: state
input_file: fixtures/reports/synthetic-a1mini-ams-lite.json
---
{
  "nozzle_temper": 219.8,
  "nozzle_target_temper": 220.0,
  "bed_temper": 60.0,
  "bed_target_temper": 60.0,
  "chamber_temper": null,
  "cooling_fan_speed": 15,
  "big_fan1_speed": 0,
  "big_fan2_speed": 0,
  "heatbreak_fan_speed": 15,
  "gcode_state": "RUNNING",
  "gcode_file": "cable_clip.gcode",
  "subtask_name": "cable_clip",
  "mc_percent": 78,
  "mc_remaining_time": 11,
  "layer_num": 88,
  "total_layer_num": 112,
  "stg_cur": 0,
  "print_type": "local",
  "print_error": 0,
  "spd_lvl": 2,
  "spd_mag": 100,
  "nozzle_diameter": "0.4",
  "nozzle_type": "stainless_steel",
  "wifi_signal": "-55dBm",
  "sdcard": true,
  "home_flag": null,
  "lights_report": [],
  "ams": {
    "ams": [
      {
        "id": 0,
        "humidity": 5,
        "humidity_raw": null,
        "temp": 0.0,
        "type": 1,
        "dry_time": null,
        "tray": [
          {
            "id": 0,
            "tray_type": "PLA",
            "tray_color": "F72323FF",
            "cols": [],
            "tray_info_idx": "GFA00",
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": 45,
            "k": null,
            "n": null,
            "nozzle_temp_min": null,
            "nozzle_temp_max": null,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": null,
            "tray_uuid": null
          },
          {
            "id": 1,
            "tray_type": "PLA",
            "tray_color": "FFFFFFFF",
            "cols": [],
            "tray_info_idx": null,
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": 88,
            "k": null,
            "n": null,
            "nozzle_temp_min": null,
            "nozzle_temp_max": null,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": null,
            "tray_uuid": null
          },
          {
            "id": 2,
            "tray_type": "PLA",
            "tray_color": "161616FF",
            "cols": [],
            "tray_info_idx": null,
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": 12,
            "k": null,
            "n": null,
            "nozzle_temp_min": null,
            "nozzle_temp_max": null,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": null,
            "tray_uuid": null
          },
          {
            "id": 3,
            "tray_type": "PETG",
            "tray_color": "0A2989FF",
            "cols": [],
            "tray_info_idx": null,
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": 70,
            "k": null,
            "n": null,
            "nozzle_temp_min": null,
            "nozzle_temp_max": null,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": null,
            "tray_uuid": null
          }
        ]
      }
    ],
    "ams_exist_bits": 1,
    "tray_exist_bits": 15,
    "tray_is_bbl_bits": null,
    "tray_read_done_bits": null,
    "tray_now": 0,
    "tray_tar": 0,
    "tray_pre": 255,
    "version": 311,
    "insert_flag": null,
    "power_on_flag": null
  },
  "vt_tray": {
    "id": 254,
    "tray_type": "",
    "tray_color": "00000000",
    "cols": [],
    "tray_info_idx": null,
    "tray_id_name": null,
    "tray_sub_brands": null,
    "remain": null,
    "k": null,
    "n": null,
    "nozzle_temp_min": null,
    "nozzle_temp_max": null,
    "bed_temp": null,
    "tray_diameter": null,
    "tray_weight": null,
    "tag_uid": null,
    "tray_uuid": null
  },
  "device": null,
  "hms": []
}
