crates/pandaspy-proto/tests/snapshots/golden__every_report_fixture_parses_and_matches_its_snapshot@synthetic-h2d-ams2pro-ht.json.snap
---
source: crates/pandaspy-proto/tests/golden.rs
assertion_line: 36
expression: state
input_file: fixtures/reports/synthetic-h2d-ams2pro-ht.json
---
{
  "nozzle_temper": 279.6,
  "nozzle_target_temper": 280.0,
  "bed_temper": 100.0,
  "bed_target_temper": 100.0,
  "chamber_temper": 55.0,
  "cooling_fan_speed": 10,
  "big_fan1_speed": 8,
  "big_fan2_speed": 15,
  "heatbreak_fan_speed": 15,
  "gcode_state": "RUNNING",
  "gcode_file": "chassis_plate_2.gcode",
  "subtask_name": "chassis",
  "mc_percent": 8,
  "mc_remaining_time": 412,
  "layer_num": 23,
  "total_layer_num": 305,
  "stg_cur": 0,
  "print_type": "local",
  "print_error": 0,
  "spd_lvl": 2,
  "spd_mag": 100,
  "nozzle_diameter": "0.4",
  "nozzle_type": "hardened_steel",
  "wifi_signal": "-40dBm",
  "sdcard": true,
  "home_flag": null,
  "lights_report": [
    {
      "node": "chamber_light",
      "mode": "on"
    }
  ],
  "ams": {
    "ams": [
      {
        "id": 0,
        "humidity": 2,
        "humidity_raw": 31,
        "temp": 41.5,
        "type": 2,
        "dry_time": 120,
        "tray": [
          {
            "id": 0,
            "tray_type": "ABS",
            "tray_color": "1B2430FF",
            "cols": [],
            "tray_info_idx": "GFB00",
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": 80,
            "k": null,
            "n": null,
            "nozzle_temp_min": null,
            "nozzle_temp_max": null,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": null,
            "tray_uuid": null
          },
          {
            "id": 1,
            "tray_type": "ASA",
            "tray_color": "E0E0E0FF",
            "cols": [],
            "tray_info_idx": null,
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": 55,
            "k": null,
            "n": null,
            "nozzle_temp_min": null,
            "nozzle_temp_max": null,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": null,
            "tray_uuid": null
          },
          {
            "id": 2,
            "tray_type": "PC",
            "tray_color": "8E8E93FF",
            "cols": [
              "8E8E93FF",
              "1B2430FF"
            ],
            "tray_info_idx": null,
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": 97,
            "k": null,
            "n": null,
            "nozzle_temp_min": null,
            "nozzle_temp_max": null,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": null,
            "tray_uuid": null
          },
          {
            "id": 3,
            "tray_type": null,
            "tray_color": null,
            "cols": [],
            "tray_info_idx": null,
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": null,
            "k": null,
            "n": null,
            "nozzle_temp_min": null,
            "nozzle_temp_max": null,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": null,
            "tray_uuid": null
          }
        ]
      },
      {
        "id": 128,
        "humidity": 1,
        "humidity_raw": 12,
        "temp": 55.0,
        "type": 3,
        "dry_time": 0,
        "tray": [
          {
            "id": 0,
            "tray_type": "PA-CF",
            "tray_color": "2D2D2DFF",
            "cols": [],
            "tray_info_idx": null,
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": 64,
            "k": null,
            "n": null,
            "nozzle_temp_min": 280.0,
            "nozzle_temp_max": 300.0,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": null,
            "tray_uuid": null
          }
        ]
      }
    ],
    "ams_exist_bits": 1,
    "tray_exist_bits": 7,
    "tray_is_bbl_bits": null,
    "tray_read_done_bits": null,
    "tray_now": 2,
    "tray_tar": 2,
    "tray_pre": 255,
    "version": 1021,
    "insert_flag": null,
    "power_on_flag": null
  },
  "vt_tray": {
    "id": 254,
    "tray_type": "",
    "tray_color": "00000000",
    "cols": [],
    "tray_info_idx": null,
    "tray_id_name": null,
    "tray_sub_brands": null,
    "remain": null,
    "k": null,
    "n": null,
    "nozzle_temp_min": null,
    "nozzle_temp_max": null,
    "bed_temp": null,
    "tray_diameter": null,
    "tray_weight": null,
    "tag_uid": null,
    "tray_uuid": null
  },
  "device": {
    "extruder": {
      "info": [
        {
          "id": 0,
          "snow": null,
          "spre": null,
          "star": null
        },
        {
          "id": 1,
          "snow": null,
          "spre": null,
          "star": null
        }
      ],
      "state": null
    }
  },
  "hms": []
}
