crates/pandaspy-proto/tests/snapshots/golden__every_report_fixture_parses_and_matches_its_snapshot@synthetic-x1c-printing.json.snap
---
source: crates/pandaspy-proto/tests/golden.rs
assertion_line: 36
expression: state
input_file: fixtures/reports/synthetic-x1c-printing.json
---
{
  "nozzle_temper": 219.6,
  "nozzle_target_temper": 220.0,
  "bed_temper": 54.8,
  "bed_target_temper": 55.0,
  "chamber_temper": 31.0,
  "cooling_fan_speed": 15,
  "big_fan1_speed": 9,
  "big_fan2_speed": 11,
  "heatbreak_fan_speed": 15,
  "gcode_state": "RUNNING",
  "gcode_file": "benchy_plate_1.gcode",
  "subtask_name": "benchy",
  "mc_percent": 42,
  "mc_remaining_time": 96,
  "layer_num": 57,
  "total_layer_num": 137,
  "stg_cur": 0,
  "print_type": "local",
  "print_error": 0,
  "spd_lvl": 2,
  "spd_mag": 100,
  "nozzle_diameter": "0.4",
  "nozzle_type": "hardened_steel",
  "wifi_signal": "-46dBm",
  "sdcard": true,
  "home_flag": 6407,
  "lights_report": [
    {
      "node": "chamber_light",
      "mode": "on"
    }
  ],
  "ams": {
    "ams": [
      {
        "id": 0,
        "humidity": 3,
        "humidity_raw": null,
        "temp": 28.4,
        "type": null,
        "dry_time": null,
        "tray": [
          {
            "id": 0,
            "tray_type": "PLA",
            "tray_color": "00AE42FF",
            "cols": [],
            "tray_info_idx": "GFA00",
            "tray_id_name": "A00-G1",
            "tray_sub_brands": "PLA Basic",
            "remain": 92,
            "k": 0.02,
            "n": 1.0,
            "nozzle_temp_min": 190.0,
            "nozzle_temp_max": 230.0,
            "bed_temp": 35.0,
            "tray_diameter": 1.75,
            "tray_weight": 250.0,
            "tag_uid": "0000000000000000",
            "tray_uuid": "00000000000000000000000000000000"
          },
          {
            "id": 1,
            "tray_type": "PETG",
            "tray_color": "1B2430FF",
            "cols": [],
            "tray_info_idx": "GFG00",
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": 61,
            "k": null,
            "n": null,
            "nozzle_temp_min": 230.0,
            "nozzle_temp_max": 260.0,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": "0000000000000000",
            "tray_uuid": "00000000000000000000000000000000"
          },
          {
            "id": 2,
            "tray_type": null,
            "tray_color": null,
            "cols": [],
            "tray_info_idx": null,
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": null,
            "k": null,
            "n": null,
            "nozzle_temp_min": null,
            "nozzle_temp_max": null,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": null,
            "tray_uuid": null
          },
          {
            "id": 3,
            "tray_type": "TPU",
            "tray_color": "F5A623FF",
            "cols": [],
            "tray_info_idx": null,
            "tray_id_name": null,
            "tray_sub_brands": null,
            "remain": -1,
            "k": null,
            "n": null,
            "nozzle_temp_min": null,
            "nozzle_temp_max": null,
            "bed_temp": null,
            "tray_diameter": null,
            "tray_weight": null,
            "tag_uid": "0000000000000000",
            "tray_uuid": "00000000000000000000000000000000"
          }
        ]
      }
    ],
    "ams_exist_bits": 1,
    "tray_exist_bits": 11,
    "tray_is_bbl_bits": 11,
    "tray_read_done_bits": 11,
    "tray_now": 1,
    "tray_tar": 1,
    "tray_pre": 255,
    "version": 518,
    "insert_flag": true,
    "power_on_flag": false
  },
  "vt_tray": {
    "id": 254,
    "tray_type": "",
    "tray_color": "00000000",
    "cols": [],
    "tray_info_idx": null,
    "tray_id_name": null,
    "tray_sub_brands": null,
    "remain": null,
    "k": null,
    "n": null,
    "nozzle_temp_min": null,
    "nozzle_temp_max": null,
    "bed_temp": null,
    "tray_diameter": null,
    "tray_weight": null,
    "tag_uid": null,
    "tray_uuid": null
  },
  "device": null,
  "hms": []
}
